fixed font on ios6

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -262,6 +262,10 @@ code geojson  { color: #e6db74; }
 		display: inline;
 	}
 
+	.extable {
+		font-size:0.7em;
+	}
+
 	.extable .split{
 		display: inline;
 	}
